[package]
name = "koi-proxy"
description = "TLS-terminating reverse proxy with automatic certificate management"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "README.md"
keywords = ["proxy", "tls", "reverse-proxy", "certificate", "https"]
categories = ["network-programming", "web-programming"]

[dependencies]
koi-common.workspace = true
koi-config.workspace = true
async-trait.workspace = true
utoipa.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tracing.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
axum.workspace = true
notify.workspace = true
tokio-rustls.workspace = true
rustls.workspace = true
rcgen.workspace = true
url.workspace = true
hostname.workspace = true
toml = "0.8"
