[package]
name = "koi-truststore"
description = "Platform trust store integration for installing and removing local CA certificates"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
koi-common.workspace = true
tracing.workspace = true
thiserror.workspace = true
