[package]
name = "koi-udp"
description = "UDP datagram bridging over HTTP/SSE for containerized workloads"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "README.md"
keywords = ["udp", "datagram", "bridge", "sse", "container"]
categories = ["network-programming"]

[dependencies]
koi-common.workspace = true

tokio.workspace = true
tokio-util.workspace = true
tokio-stream = { workspace = true, features = ["sync"] }
tracing.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
axum.workspace = true
uuid.workspace = true
base64.workspace = true
utoipa.workspace = true
futures-util.workspace = true
async-stream.workspace = true
